[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostline-bookmark-audit"
version = "0.1.0"
description = "Browser bookmark dual-use auditor — part of the Ghostline cybersecurity suite"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mars / Mellowambience", email = "natorretti11@gmail.com" }]
keywords = ["security", "cybersecurity", "bookmarks", "privacy", "ghostline", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
# Stdlib-only by design — zero third-party dependencies.
dependencies = []

[project.scripts]
bookmark-audit = "audit:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.setuptools]
py-modules = ["audit"]

[tool.ruff]
line-length = 100
target-version = "py311"
