[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { shadowaudit = "." }
packages = ["shadowaudit", "shadowaudit.tests"]

[project]
name = "ghostline-shadowaudit"
version = "0.1.0"
description = "Non-destructive web-app security checklist generator — part of the Ghostline suite"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mars / Mellowambience", email = "natorretti11@gmail.com" }]
keywords = ["security", "web", "audit", "checklist", "ghostline", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
shadowaudit = "shadowaudit.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"
